--- a/packages/plugin-css/tsconfig.json
+++ b/packages/plugin-css/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "noEmit": false,
+    "baseUrl": ".",
     "outDir": "./dist/"
   },
-  "include": ["src"],
-  "exclude": ["src/**/*.test.ts"]
+  "include": ["src", "test"]
 }
