--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:examples": "pnpm run -r --parallel --if-present build:tokens",
     "changeset": "changeset",
     "dev": "pnpm run -r --parallel --if-present --filter \"@cobalt-ui/*\" dev",
-    "lint": "eslint \"packages/**/*.{ts,js,cjs,mjs}\"",
+    "lint": "pnpm run -r --parallel --if-present lint",
     "test": "pnpm run -r --if-present --aggregate-output --parallel test",
     "prepublishOnly": "pnpm run build",
     "version": "pnpm run build && changeset version && pnpm i --no-frozen-lockfile"
@@ -22,10 +22,10 @@
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.27.1",
     "del-cli": "^5.1.0",
-    "eslint": "9.0.0-beta.2",
+    "eslint": "9.0.0-rc.0",
     "js-yaml": "^4.1.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.2",
-    "typescript-eslint": "^7.2.0"
+    "typescript": "^5.4.3",
+    "typescript-eslint": "^7.4.0"
   }
 }
