--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,11 +32,12 @@
   "scripts": {
     "build": "pnpm run build:clean && pnpm run build:ts && pnpm run build:bundle && pnpm run build:license",
     "build:clean": "del dist",
-    "build:ts": "tsc",
+    "build:ts": "tsc -p tsconfig.build.json",
     "build:bundle": "esbuild --format=esm --bundle --minify dist/index.js --outfile=dist/index.min.js --sourcemap && cp dist/index.d.ts dist/index.min.d.ts",
     "build:license": "node ../../scripts/inject-license.js @cobalt-ui/core dist/index.js,dist/index.min.js",
     "dev": "pnpm run --parallel \"/^dev:.*/\"",
-    "dev:ts": "tsc --watch",
+    "lint": "eslint \"{src,test}/**/*\"",
+    "dev:ts": "tsc -p tsconfig.build.json --watch",
     "test": "pnpm run \"/^test:.*/\"",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
@@ -49,6 +50,6 @@
   "devDependencies": {
     "@types/node": "^20.11.27",
     "esbuild": "^0.19.12",
-    "vitest": "^1.3.1"
+    "vitest": "^1.4.0"
   }
 }
