--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "noEmit": false,
+    "baseUrl": ".",
     "outDir": "./dist/"
   },
-  "include": ["src"]
+  "include": ["src", "test"]
 }
