--- a/packages/lint-a11y/package.json
+++ b/packages/lint-a11y/package.json
@@ -27,9 +27,10 @@
   "scripts": {
     "build": "pnpm run build:clean && pnpm run build:ts && pnpm run build:license",
     "build:clean": "del dist",
-    "build:ts": "tsc",
-    "build:license": "node ../../scripts/inject-license.js @cobalt-ui/plugin-css dist/index.js",
-    "dev": "tsc -w",
+    "build:ts": "tsc -p tsconfig.build.json",
+    "build:license": "node ../../scripts/inject-license.js @cobalt-ui/lint-a11y dist/index.js",
+    "dev": "tsc -p tsconfig.build.json -w",
+    "lint": "eslint \"{src,test}/**/*\"",
     "test": "pnpm run \"/^test:.*/\"",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
@@ -42,9 +43,10 @@
     "@cobalt-ui/core": "workspace:^",
     "@types/apca-w3": "^0.1.3",
     "@types/culori": "^2.1.0",
+    "@types/js-yaml": "^4.0.9",
     "execa": "^8.0.1",
     "js-yaml": "^4.1.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.4.0"
   },
   "dependencies": {
     "apca-w3": "^0.1.9",
