--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -27,9 +27,10 @@
   "scripts": {
     "build": "pnpm run build:clean && pnpm run build:ts && pnpm run build:license",
     "build:clean": "del dist",
-    "build:ts": "tsc",
+    "build:ts": "tsc -p tsconfig.build.json",
     "build:license": "node ../../scripts/inject-license.js @cobalt-ui/plugin-js dist/index.js",
-    "dev": "tsc -w",
+    "dev": "tsc -p tsconfig.build.json -w",
+    "lint": "eslint \"{src,test}/**/*\"",
     "test": "co build -c ./test/types.tokens.mjs && pnpm run \"/^test:.*/\"",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
@@ -44,6 +45,6 @@
     "@cobalt-ui/cli": "workspace:^",
     "@cobalt-ui/core": "workspace:^",
     "fast-glob": "^3.3.2",
-    "vitest": "^1.3.1"
+    "vitest": "^1.4.0"
   }
 }
