--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -28,9 +28,10 @@
   "scripts": {
     "build": "pnpm run build:clean && pnpm run build:ts && pnpm run build:license",
     "build:clean": "del dist",
-    "build:ts": "tsc",
+    "build:ts": "tsc -p tsconfig.build.json",
     "build:license": "node ../../scripts/inject-license.js @cobalt-ui/plugin-sass dist/index.js",
-    "dev": "tsc -w",
+    "dev": "tsc -p tsconfig.build.json -w",
+    "lint": "eslint \"{src,test}/**/*\"",
     "test": "pnpm run \"/^test:.*/\"",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
@@ -50,6 +51,6 @@
     "@cobalt-ui/core": "workspace:^",
     "@cobalt-ui/plugin-css": "workspace:^",
     "@types/node": "^20.11.27",
-    "vitest": "^1.3.1"
+    "vitest": "^1.4.0"
   }
 }
