--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -27,9 +27,10 @@
   "scripts": {
     "build": "pnpm run build:clean && pnpm run build:ts && pnpm run build:license",
     "build:clean": "del dist",
-    "build:ts": "tsc",
+    "build:ts": "tsc -p tsconfig.build.json",
     "build:license": "node ../../scripts/inject-license.js @cobalt-ui/plugin-tailwind dist/index.js",
-    "dev": "tsc -w",
+    "dev": "tsc  -p tsconfig.build.json -w",
+    "lint": "eslint \"{src,test}/**/*\"",
     "test": "pnpm run \"/^test:.*/\"",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
@@ -45,9 +46,10 @@
   "devDependencies": {
     "@cobalt-ui/cli": "workspace:^",
     "@cobalt-ui/core": "workspace:^",
-    "@types/node": "^20.11.27",
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^20.11.30",
     "js-yaml": "^4.1.0",
     "tailwindcss": "^3.4.1",
-    "vitest": "^1.3.1"
+    "vitest": "^1.4.0"
   }
 }
