--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -10,13 +10,16 @@
   "type": "module",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "del dist && tsc",
-    "dev": "tsc -w",
-    "test": "vitest run"
+    "build": "del dist && tsc -p tsconfig.build.json",
+    "dev": "tsc  -p tsconfig.build.json -w",
+    "lint": "eslint \"{src,test}/**/*\"",
+    "test": "pnpm run \"/^test:.*/\"",
+    "test:js": "vitest run",
+    "test:ts": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/node": "^20.11.27",
     "del-cli": "^5.1.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.4.0"
   }
 }
