--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -51,9 +51,10 @@
     "chokidar": "^3.6.0",
     "culori": "^3.3.0",
     "dotenv": "^16.4.5",
-    "js-yaml": "^4.1.0",
+    "parse-json": "^8.1.0",
     "piscina": "^3.2.0",
     "svgo": "^3.2.0",
+    "yaml": "^2.4.1",
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
