--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -46,10 +46,9 @@
   "devDependencies": {
     "@cobalt-ui/cli": "workspace:^",
     "@cobalt-ui/core": "workspace:^",
-    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.11.30",
-    "js-yaml": "^4.1.0",
     "tailwindcss": "^3.4.1",
-    "vitest": "^1.4.0"
+    "vitest": "^1.4.0",
+    "yaml": "^2.4.1"
   }
 }
