--- a/packages/lint-a11y/package.json
+++ b/packages/lint-a11y/package.json
@@ -38,18 +38,17 @@
   "peerDependencies": {
     "@cobalt-ui/cli": "^1.8.1"
   },
+  "dependencies": {
+    "apca-w3": "^0.1.9",
+    "culori": "^4.0.1"
+  },
   "devDependencies": {
     "@cobalt-ui/cli": "workspace:^",
     "@cobalt-ui/core": "workspace:^",
     "@types/apca-w3": "^0.1.3",
     "@types/culori": "^2.1.0",
-    "@types/js-yaml": "^4.0.9",
     "execa": "^8.0.1",
-    "js-yaml": "^4.1.0",
-    "vitest": "^1.4.0"
-  },
-  "dependencies": {
-    "apca-w3": "^0.1.9",
-    "culori": "^4.0.1"
+    "vitest": "^1.4.0",
+    "yaml": "^2.4.1"
   }
 }
