--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -62,6 +62,7 @@
     "@types/node": "^20.11.27",
     "execa": "^8.0.1",
     "msw": "^2.2.3",
+    "strip-ansi": "^7.1.0",
     "vitest": "^1.4.0"
   }
 }
