--- a/packages/lint-a11y/package.json
+++ b/packages/lint-a11y/package.json
@@ -49,6 +49,7 @@
     "@types/apca-w3": "^0.1.3",
     "@types/culori": "^2.1.0",
     "execa": "^8.0.1",
+    "strip-ansi": "^7.1.0",
     "vitest": "^1.4.0",
     "yaml": "^2.4.1"
   }
