--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,7 +18,9 @@
     "sass",
     "css",
     "style tokens",
-    "style system"
+    "style system",
+    "linting",
+    "lint"
   ],
   "repository": {
     "type": "git",
@@ -44,8 +46,11 @@
   "dependencies": {
     "@cobalt-ui/utils": "^1.2.5",
     "@types/culori": "^2.1.0",
+    "@types/deep-equal": "^1.0.4",
     "culori": "^4.0.1",
+    "deep-equal": "^2.2.3",
     "parse-json": "^8.1.0",
+    "scule": "^1.3.0",
     "yaml": "^2.4.1"
   },
   "devDependencies": {
