--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.27.1",
+    "@types/node": "^20.12.2",
     "del-cli": "^5.1.0",
     "eslint": "9.0.0-rc.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.3",
-    "typescript-eslint": "^7.4.0"
+    "typescript-eslint": "^7.4.0",
+    "vitest": "^1.4.0"
   }
 }
