--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -49,8 +49,6 @@
   "devDependencies": {
     "@cobalt-ui/cli": "workspace:^",
     "@cobalt-ui/core": "workspace:^",
-    "@cobalt-ui/plugin-css": "workspace:^",
-    "@types/node": "^20.11.27",
-    "vitest": "^1.4.0"
+    "@cobalt-ui/plugin-css": "workspace:^"
   }
 }
