--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -18,8 +18,6 @@
     "test:ts": "tsc --noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.11.27",
-    "del-cli": "^5.1.0",
-    "vitest": "^1.4.0"
+    "del-cli": "^5.1.0"
   }
 }
