--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "del dist && tsc -p tsconfig.build.json",
     "dev": "tsc  -p tsconfig.build.json -w",
-    "lint": "biome check .",
+    "lint": "biome check --changed .",
     "test": "pnpm run \"/^test:.*/\"",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
