--- a/packages/token-tools/package.json
+++ b/packages/token-tools/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@types/culori": "^2.1.0",
     "culori": "^4.0.1",
+    "scule": "^1.3.0",
     "wildcard-match": "^5.1.3"
   }
 }
