Add build, buildEnd

--- a/packages/token-tools/package.json
+++ b/packages/token-tools/package.json
@@ -25,6 +25,11 @@
   "license": "MIT",
   "type": "module",
   "main": "./dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./css": "./dist/css/index.js",
+    "./*": "./*"
+  },
   "scripts": {
     "build": "pnpm run build:clean && pnpm run build:ts && pnpm run build:license",
     "build:clean": "del dist",
