--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "version": "pnpm run build && changeset version && pnpm i --no-frozen-lockfile"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.8.1",
+    "@biomejs/biome": "^1.6.4",
     "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.5",
-    "@types/node": "^20.14.2",
+    "@changesets/cli": "^2.27.1",
+    "@types/node": "^20.12.4",
     "del-cli": "^5.1.0",
-    "typescript": "^5.4.5",
-    "vitest": "^1.6.0"
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.3",
+    "vitest": "^1.4.0"
   }
 }
