--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "@babel/code-frame": "^7.24.2",
     "@humanwhocodes/momoa": "^3.0.1",
-    "@terrazzo/token-tools": "^0.0.0",
+    "@terrazzo/token-tools": "workspace:^",
     "@types/babel__code-frame": "^7.0.6",
     "@types/culori": "^2.1.0",
     "@types/deep-equal": "^1.0.4",
@@ -43,7 +43,6 @@
     "is-what": "^4.1.16",
     "merge-anything": "^5.1.7",
     "picocolors": "^1.0.0",
-    "scule": "^1.3.0",
     "wildcard-match": "^5.1.3",
     "yaml": "^2.4.1"
   },
