--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -30,11 +30,11 @@
     "test:ts": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@terrazzo/cli": "^1.11.0"
+    "@terrazzo/cli": "*"
   },
   "dependencies": {
-    "@terrazzo/parser": "^0.0.0",
-    "@terrazzo/token-tools": "^0.0.0",
+    "@terrazzo/parser": "workspace:^",
+    "@terrazzo/token-tools": "workspace:^",
     "@types/culori": "^2.1.0",
     "@types/mime": "^3.0.4",
     "culori": "^3.3.0",
