Get CLI working

--- a/packages/cli/biome.json
+++ b/packages/cli/biome.json
@@ -4,5 +4,12 @@
   "files": {
     "include": ["./src/", "./test/"],
     "ignore": ["./test/fixtures/**/*.json", "./test/fixtures/**/*.js", "./test/fixtures/**/*.d.ts"]
+  },
+  "linter": {
+    "rules": {
+      "suspicious": {
+        "noConsoleLog": "off"
+      }
+    }
   }
 }
