--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cobalt-ui/cli",
   "description": "CLI for managing design tokens using the Design Tokens Community Group (DTCG) standard and generating code for any platform via plugins.",
-  "version": "1.11.0",
+  "version": "1.11.2",
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
@@ -46,8 +46,8 @@
     "test:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@cobalt-ui/core": "^1.11.1",
-    "@cobalt-ui/utils": "^1.2.6",
+    "@cobalt-ui/core": "workspace:^",
+    "@cobalt-ui/utils": "workspace:^",
     "chokidar": "^3.6.0",
     "culori": "^4.0.1",
     "dotenv": "^16.4.5",
