--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cobalt-ui/core",
   "description": "Parser/validator for the Design Tokens Community Group (DTCG) standard.",
-  "version": "1.11.1",
+  "version": "1.11.2",
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
@@ -44,7 +44,7 @@
     "test:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@cobalt-ui/utils": "^1.2.6",
+    "@cobalt-ui/utils": "workspace:^",
     "@types/culori": "^2.1.0",
     "@types/deep-equal": "^1.0.4",
     "culori": "^4.0.1",
