--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cobalt-ui/plugin-js",
   "description": "Generate JS, TS, and JSON from your design tokens schema (requires @cobalt-ui/cli)",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
@@ -36,10 +36,10 @@
     "test:ts": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@cobalt-ui/cli": "1.11.0"
+    "@cobalt-ui/cli": "^1.11.0"
   },
   "dependencies": {
-    "@cobalt-ui/utils": "^1.2.6"
+    "@cobalt-ui/utils": "workspace:^"
   },
   "devDependencies": {
     "@cobalt-ui/cli": "workspace:^",
