--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -40,8 +40,8 @@
     "tailwindcss": "*"
   },
   "dependencies": {
-    "@cobalt-ui/plugin-css": "^1.7.3",
-    "@cobalt-ui/utils": "^1.2.6"
+    "@cobalt-ui/plugin-css": "workspace:^",
+    "@cobalt-ui/utils": "workspace:^"
   },
   "devDependencies": {
     "@cobalt-ui/cli": "workspace:^",
