--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,8 +50,7 @@
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
-    "@types/node": "^20.14.1",
-    "execa": "^8.0.1",
-    "vitest": "^1.6.0"
+    "@types/node": "^20.14.2",
+    "execa": "^8.0.1"
   }
 }
