--- a/packages/token-tools/package.json
+++ b/packages/token-tools/package.json
@@ -43,9 +43,11 @@
     "test:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@types/culori": "^2.1.0",
     "culori": "^4.0.1",
     "scule": "^1.3.0",
     "wildcard-match": "^5.1.3"
+  },
+  "devDependencies": {
+    "@types/culori": "^2.1.0"
   }
 }
