--- a/examples/radix/package.json
+++ b/examples/radix/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build:tokens": "co build",
+    "build:tokens": "tz build",
     "update": "node ./scripts/update.js"
   },
   "dependencies": {
@@ -15,6 +15,6 @@
     "@terrazzo/plugin-css": "workspace:*",
     "@terrazzo/plugin-js": "workspace:*",
     "@terrazzo/plugin-sass": "workspace:*",
-    "yaml": "^2.4.1"
+    "yaml": "^2.4.5"
   }
 }
