--- a/examples/ibm/package.json
+++ b/examples/ibm/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build:tokens": "co build",
+    "build:tokens": "tz build",
     "update": "node scripts/update"
   },
   "devDependencies": {
-    "@carbon/colors": "^11.17.1",
-    "@carbon/icons": "^11.22.1",
-    "@carbon/type": "^11.20.1",
+    "@carbon/colors": "^11.22.0",
+    "@carbon/icons": "^11.43.0",
+    "@carbon/type": "^11.27.0",
     "@terrazzo/cli": "workspace:*",
     "@terrazzo/plugin-css": "workspace:*",
     "@terrazzo/plugin-js": "workspace:*",
