--- a/examples/shopify/package.json
+++ b/examples/shopify/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build:tokens": "co build"
+    "build:tokens": "tz build"
   },
   "devDependencies": {
     "@terrazzo/cli": "workspace:*",
