--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -34,15 +34,9 @@
   },
   "dependencies": {
     "@terrazzo/parser": "workspace:^",
-    "@terrazzo/token-tools": "workspace:^",
-    "@types/culori": "^2.1.0",
-    "@types/mime": "^3.0.4",
-    "culori": "^3.3.0",
-    "mime": "^3.0.0",
-    "svgo": "^3.3.2"
+    "@terrazzo/token-tools": "workspace:^"
   },
   "devDependencies": {
-    "@terrazzo/cli": "workspace:^",
-    "yaml": "^2.4.3"
+    "@terrazzo/cli": "workspace:^"
   }
 }
