--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -26,10 +26,7 @@
     "@terrazzo/plugin-css": "workspace:^"
   },
   "dependencies": {
-    "@terrazzo/token-tools": "workspace:^",
-    "@types/mime": "^3.0.4",
-    "mime": "^3.0.0",
-    "svgo": "^3.2.0"
+    "@terrazzo/token-tools": "workspace:^"
   },
   "devDependencies": {
     "@terrazzo/cli": "workspace:^",
