--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "del-cli": "^5.1.0",
     "prettier": "^3.3.2",
     "strip-ansi": "^7.1.0",
+    "stylelint": "^16.6.1",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
   }
