--- a/biome.json
+++ b/biome.json
@@ -13,7 +13,8 @@
   },
   "javascript": {
     "formatter": {
-      "quoteStyle": "single"
+      "quoteStyle": "single",
+      "jsxQuoteStyle": "single"
     }
   },
   "linter": {
