--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -9,8 +9,7 @@
     "directory": "./packages/icons"
   },
   "scripts": {
-    "build": "del dist && pnpm run build:ts",
-    "build:ts": "tsc",
+    "build": "rollup -c rollup.config.js",
     "lint": "pnpm run \"/^lint:.*/\"",
     "lint:js": "biome check ."
   },
@@ -19,10 +18,15 @@
     "react-dom": "*"
   },
   "devDependencies": {
+    "@rollup/plugin-swc": "^0.3.1",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "rollup": "^4.18.0",
+    "rollup-plugin-cleandir": "^2.0.0",
+    "rollup-plugin-import-css": "^3.5.0",
     "typescript": "^5.4.5"
   }
 }
