--- a/packages/react-color-picker/package.json
+++ b/packages/react-color-picker/package.json
@@ -8,7 +8,15 @@
   },
   "license": "MIT",
   "type": "module",
-  "keywords": ["color", "wcg", "p3", "oklab", "oklch", "hsl", "picker"],
+  "keywords": [
+    "color",
+    "wcg",
+    "p3",
+    "oklab",
+    "oklch",
+    "hsl",
+    "picker"
+  ],
   "main": "./dist/index.js",
   "repository": {
     "type": "git",
@@ -16,12 +24,8 @@
     "directory": "./packages/react-color-picker"
   },
   "scripts": {
-    "build": "del dist && pnpm run build:css && pnpm run build:ts",
-    "build:css": "cpy \"src/**/*.css\" dist",
-    "build:ts": "tsc && size-limit",
-    "dev": "pnpm run build && pnpm run --parallel \"/^dev:.*/\"",
-    "dev:css": "chokidar \"src/**/*.css\" -c \"pnpm run build:css\"",
-    "dev:ts": "tsc --watch",
+    "build": "rollup -c rollup.config.js && size-limit",
+    "dev": "pnpm run build && chokidar \"./src/**/*\" -c \"rollup -c rollup.config.js\"",
     "lint": "pnpm run \"/^lint:.*/\"",
     "lint:js": "biome check .",
     "lint:css": "stylelint .",
@@ -40,6 +44,8 @@
     "clsx": "^2.1.1"
   },
   "devDependencies": {
+    "@rollup/plugin-swc": "^0.3.1",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@size-limit/preset-small-lib": "^11.1.4",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
@@ -48,11 +54,13 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "chokidar-cli": "^3.0.0",
-    "cpy-cli": "^5.0.0",
     "culori": "^4.0.1",
     "jsdom": "^24.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "rollup": "^4.18.0",
+    "rollup-plugin-cleandir": "^2.0.0",
+    "rollup-plugin-import-css": "^3.5.0",
     "size-limit": "^11.1.4",
     "vitest": "^1.6.0",
     "vitest-axe": "^0.1.0"
