--- a/packages/use-color/tsconfig.json
+++ b/packages/use-color/tsconfig.json
@@ -1,9 +1,7 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.react.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "jsx": "preserve",
-    "lib": ["DOM", "ESNext"],
     "noEmit": true,
     "skipLibCheck": true,
     "outDir": "dist"
