--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "build": "rollup -c rollup.config.js",
+    "format": "biome format --write src",
     "lint": "pnpm run \"/^lint:.*/\"",
     "lint:js": "biome check ."
   },
