--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "pnpm run sb",
     "build-storybook": "sb build",
+    "format": "biome format --write src",
     "lint": "pnpm run \"/^lint:.*/\"",
-    "lint:js": "biome check .",
-    "lint:css": "stylelint .",
+    "lint:js": "biome check src",
+    "lint:css": "stylelint src",
     "sb": "sb dev -p 9009"
   },
   "devDependencies": {
