--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "changeset": "changeset",
     "dev": "pnpm run -r --parallel --if-present --filter \"@terrazzo/*\" dev",
     "lint": "pnpm run -r --parallel --if-present lint",
+    "format": "pnpm run -r --parallel --if-present format",
     "test": "pnpm run -r --if-present --aggregate-output --parallel test",
     "prepublishOnly": "pnpm run build",
     "version": "pnpm run build && changeset version && pnpm i --no-frozen-lockfile"
