--- a/packages/use-color/package.json
+++ b/packages/use-color/package.json
@@ -16,6 +16,7 @@
   "keywords": ["color", "color-module-4", "culori", "react", "hooks"],
   "scripts": {
     "build": "tsc && size-limit",
+    "format": "biome format --write .",
     "lint": "pnpm run \"/^lint:.*/\"",
     "lint:js": "biome check .",
     "lint:css": "stylelint .",
