--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,5 @@
 packages:
-  - 'docs/'
-  - 'examples/**'
-  - 'packages/**'
-  - '!packages/**/test/**'
+  - "examples/**"
+  - "packages/**"
+  - "www"
+  - "!packages/**/test/**"
