--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -12,6 +12,7 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "noEmit": true,
+    "noEmitOnError": false,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "types": ["vite/client"]
