Fix React Color Picker

--- a/biome.json
+++ b/biome.json
@@ -24,6 +24,9 @@
       "complexity": {
         "useArrowFunction": "off"
       },
+      "correctness": {
+        "useExhaustiveDependencies": "off"
+      },
       "style": {
         "noNonNullAssertion": "off",
         "noUselessElse": "off",
