--- a/www/package.json
+++ b/www/package.json
@@ -28,8 +28,8 @@
   "devDependencies": {
     "@astrojs/mdx": "^3.1.2",
     "@astrojs/react": "3.6.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
     "astro": "^4.11.1",
     "json5": "^2.2.3",
     "rehype-autolink-headings": "^7.1.0",
@@ -40,5 +40,9 @@
     "vite": "^5.3.1",
     "vite-plugin-sass-dts": "^1.3.22",
     "vite-tsconfig-paths": "^4.3.2"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
   }
 }
