--- a/www/package.json
+++ b/www/package.json
@@ -21,8 +21,8 @@
     "@terrazzo/use-color": "workspace:^",
     "algoliasearch": "^4.24.0",
     "nanoid": "^5.0.7",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0-rc-58af67a8f8-20240628",
+    "react-dom": "19.0.0-rc-58af67a8f8-20240628",
     "react-instantsearch": "^7.11.4"
   },
   "devDependencies": {
@@ -30,14 +30,14 @@
     "@astrojs/react": "3.6.0",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
-    "astro": "^4.11.1",
+    "astro": "^4.11.3",
     "json5": "^2.2.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
     "typescript": "^5.5.2",
     "unist-util-visit": "^5.0.0",
-    "vite": "^5.3.1",
+    "vite": "^5.3.2",
     "vite-plugin-sass-dts": "^1.3.22",
     "vite-tsconfig-paths": "^4.3.2"
   },
