--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,18 +1,17 @@
 {
   "name": "@terrazzo/parser",
-  "description": "Parser/validator for the Design Tokens Community Group (DTCG) standard.",
   "version": "0.0.7",
+  "description": "Parser/validator for the Design Tokens Community Group (DTCG) standard.",
+  "type": "module",
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
   },
   "keywords": [
     "design tokens",
-    "design tokens community group",
-    "design tokens format module",
     "dtcg",
     "cli",
-    "w3c design tokens",
+    "w3c",
     "design system",
     "typescript",
     "sass",
@@ -22,8 +21,12 @@
     "linting",
     "lint"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/terrazzoapp/terrazzo.git",
+    "directory": "./packages/parser/"
+  },  
   "license": "MIT",
-  "type": "module",
   "main": "./index.js",
   "scripts": {
     "lint": "biome check .",
