--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -1,22 +1,19 @@
 {
   "name": "@terrazzo/plugin-css",
-  "description": "Generate CSS from your design tokens schema (requires @terrazzo/cli)",
   "version": "0.0.5",
+  "description": "Generate CSS from your design tokens schema (requires @terrazzo/cli)",
+  "type": "module",
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
   },
-  "keywords": [
-    "design tokens",
-    "design tokens community group",
-    "design tokens format module",
-    "design system",
-    "dtcg",
-    "w3c design tokens",
-    "css"
-  ],
+  "keywords": ["design tokens", "design system", "dtcg", "w3c", "css"],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/terrazzoapp/terrazzo.git",
+    "directory": "./packages/plugin-css/"
+  },
   "license": "MIT",
-  "type": "module",
   "main": "./dist/index.js",
   "scripts": {
     "build": "pnpm run build:clean && pnpm run build:ts && pnpm run build:license",
