--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -1,21 +1,25 @@
 {
   "name": "@terrazzo/plugin-tailwind",
   "version": "0.0.0",
+  "type": "module",
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
   },
   "keywords": [
     "design tokens",
-    "design tokens community group",
-    "design tokens format module",
     "design system",
     "dtcg",
     "w3c",
     "tailwind",
     "css"
   ],
-  "type": "module",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/terrazzoapp/terrazzo.git",
+    "directory": "packages/plugin-tailwind"
+  },
   "main": "./dist/index.js",
   "scripts": {
     "build": "pnpm run build:clean && pnpm run build:ts && pnpm run build:license",
