--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "pnpm run sb",
     "build-storybook": "sb build",
