--- a/packages/token-lab/package.json
+++ b/packages/token-lab/package.json
@@ -2,18 +2,18 @@
   "name": "@terrazzo/token-lab",
   "description": "Create, edit, and safe tokens.json in DTCG format",
   "version": "0.0.0",
+  "type": "module",
+  "keywords": ["dtcg", "design tokens", "tokens.json"],
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
   },
-  "license": "MIT",
-  "keywords": ["dtcg", "design tokens", "tokens.json"],
-  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+terrazzoapp/terrazzo.git",
-    "directory": "./packages/token-lab"
+    "directory": "./packages/token-lab/"
   },
+  "license": "MIT",
   "main": "./dist/index.js",
   "scripts": {
     "dev": "vite dev",
