--- a/www/package.json
+++ b/www/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@astrojs/mdx": "^3.1.2",
     "@astrojs/react": "3.6.0",
+    "@astrojs/starlight": "^0.24.5",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "astro": "^4.11.3",
@@ -36,7 +37,6 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
-    "typescript": "^5.5.2",
     "unist-util-visit": "^5.0.0",
     "vite": "^5.3.2",
     "vite-plugin-sass-dts": "^1.3.22",
